RAP-122 Add structural validation for "release_package_information.json"