@@ -1,12 +1,14 @@
 package org.ihtsdo.buildcloud.core.service.validation.postcondition;
 
-import com.google.common.io.Files;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonParser;
+import com.google.gson.JsonSyntaxException;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
-import org.ihtsdo.buildcloud.core.service.NetworkRequired;
-import org.ihtsdo.buildcloud.core.service.build.RF2Constants;
 import org.ihtsdo.buildcloud.core.dao.BuildDAO;
 import org.ihtsdo.buildcloud.core.entity.Build;
+import org.ihtsdo.buildcloud.core.service.NetworkRequired;
+import org.ihtsdo.buildcloud.core.service.build.RF2Constants;
 import org.ihtsdo.otf.rest.exception.ResourceNotFoundException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -15,7 +17,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
 import java.io.*;
-import java.nio.file.Paths;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Enumeration;
 import java.util.List;
 import java.util.zip.ZipEntry;
@@ -36,6 +40,16 @@ public class ReleasePackageCheck extends PostconditionCheck implements NetworkRe
             fatalError(errorMsg);
             return;
         }
+
+        // Validate presence and correctness of release_package_information.json
+        if (!build.getConfiguration().isDailyBuild()) {
+            errorMsg = validateReleasePackageInformationJson(build);
+            if (errorMsg != null) {
+                fatalError(errorMsg);
+                return;
+            }
+        }
+
         if (build.getConfiguration() != null && build.getConfiguration().isBetaRelease()) {
             try {
                 errorMsg = validateBetaReleasePackage(build);
@@ -54,72 +68,134 @@ public class ReleasePackageCheck extends PostconditionCheck implements NetworkRe
 
     private String validateReleasePackageAndMD5FilesExisting(Build build) {
         List<String> filePaths = buildDAO.listOutputFilePaths(build);
-        String zippedFileName = filePaths.stream().filter(filepath -> filepath.endsWith(RF2Constants.ZIP_FILE_EXTENSION)).findAny().orElse(null);
-        String md5FileName = filePaths.stream().filter(filepath -> filepath.endsWith(RF2Constants.MD5_FILE_EXTENSION)).findAny().orElse(null);
-        if (zippedFileName == null && md5FileName == null) {
+        boolean hasZipFile = filePaths.stream()
+                .anyMatch(filepath -> filepath.endsWith(RF2Constants.ZIP_FILE_EXTENSION));
+        boolean hasMd5File = filePaths.stream()
+                .anyMatch(filepath -> filepath.endsWith(RF2Constants.MD5_FILE_EXTENSION));
+
+        if (!hasZipFile && !hasMd5File) {
             return "The release package and MD5 files are missing from the S3 output-files";
-        } else if (zippedFileName == null) {
+        } else if (!hasZipFile) {
             return "The release package file is missing from the S3 output-files";
-        } else if (md5FileName == null) {
+        } else if (!hasMd5File) {
             return "The MD5 file is missing from the S3 output-files";
-        } else {
-            return null;
         }
+        return null;
     }
 
-    private String validateBetaReleasePackage(Build build) throws ResourceNotFoundException{
+    /**
+     * Validate the mandatory release_package_information.json file:
+     * - must exist in the output files
+     * - must be non-zero in size
+     * - must contain valid JSON.
+     */
+    private String validateReleasePackageInformationJson(Build build) {
         List<String> filePaths = buildDAO.listOutputFilePaths(build);
-        String zippedFileName = filePaths.stream().filter(filepath -> filepath.endsWith(RF2Constants.ZIP_FILE_EXTENSION)).findAny().orElse(null);
-        if (zippedFileName != null) {
-            StringBuilder stringBuilder = new StringBuilder();
-            zippedFileName = zippedFileName.substring(zippedFileName.lastIndexOf("/") + 1);
-            if (!zippedFileName.startsWith(RF2Constants.BETA_RELEASE_PREFIX)) {
-                stringBuilder.append(zippedFileName).append(",");
+        
+        // Check if release_package_information.json exists in output files
+        boolean fileExists = filePaths.stream()
+                .anyMatch(filepath -> {
+                    String normalized = filepath.replace("\\", "/").toLowerCase();
+                    return normalized.endsWith("release_package_information.json");
+                });
+
+        if (!fileExists) {
+            return "release_package_information.json is missing";
+        }
+
+        try (InputStream inputStream = buildDAO.getOutputFileStream(build, "release_package_information.json")) {
+            String jsonContent = IOUtils.toString(inputStream, StandardCharsets.UTF_8);
+            
+            // Check for non-zero size
+            if (jsonContent == null || jsonContent.trim().isEmpty()) {
+                return "release_package_information.json is empty.";
             }
-            InputStream inputStream = buildDAO.getOutputFileStream(build, zippedFileName);
-            File tempFile = null, tempDir = null;
+
+            // Validate JSON structure
+            String x = validateJsonStructure(jsonContent);
+            if (x != null) return x;
+        } catch (ResourceNotFoundException e) {
+            return "Failed to locate release_package_information.json in output-files: " + e.getMessage();
+        } catch (IOException e) {
+            LOGGER.error("Error while validating release_package_information.json", e);
+            return "Error while reading release_package_information.json: " + e.getMessage();
+        }
+
+        return null;
+    }
+
+    private static String validateJsonStructure(String jsonContent) {
+        try {
+            JsonElement jsonElement = JsonParser.parseString(jsonContent);
+            if (jsonElement == null || jsonElement.isJsonNull()) {
+                return "release_package_information.json does not contain valid JSON.";
+            }
+        } catch (JsonSyntaxException e) {
+            return "release_package_information.json is not valid JSON: " + e.getMessage();
+        }
+        return null;
+    }
+
+    private String validateBetaReleasePackage(Build build) throws ResourceNotFoundException {
+        List<String> filePaths = buildDAO.listOutputFilePaths(build);
+        String zippedFilePath = filePaths.stream()
+                .filter(filepath -> filepath.endsWith(RF2Constants.ZIP_FILE_EXTENSION))
+                .findAny()
+                .orElse(null);
+
+        if (zippedFilePath == null) {
+            throw new ResourceNotFoundException("Package file could not be found");
+        }
+
+        String zippedFileName = zippedFilePath.substring(zippedFilePath.lastIndexOf("/") + 1);
+        StringBuilder stringBuilder = new StringBuilder();
+        
+        if (!zippedFileName.startsWith(RF2Constants.BETA_RELEASE_PREFIX)) {
+            stringBuilder.append(zippedFileName).append(",");
+        }
+
+        try (InputStream inputStream = buildDAO.getOutputFileStream(build, zippedFileName)) {
+            Path tempFile = Files.createTempFile(zippedFileName, RF2Constants.ZIP_FILE_EXTENSION);
+            Path tempDir = Files.createTempDirectory("beta-release-");
 
             try {
-                tempFile = File.createTempFile(zippedFileName, RF2Constants.ZIP_FILE_EXTENSION);
-                FileUtils.copyInputStreamToFile(inputStream, tempFile);
-                tempDir = Files.createTempDir();
-                extractFilesFromZipToOneFolder(tempFile, tempDir.getAbsolutePath());
-                File[] files = tempDir.listFiles();
-                for (File file : files) {
-                    if (!file.isDirectory()) {
-                        if (!file.getName().startsWith(RF2Constants.README_FILENAME_PREFIX) &&
-                                !file.getName().endsWith(RF2Constants.README_FILENAME_EXTENSION) &&
-                                !file.getName().startsWith(RF2Constants.RELEASE_INFORMATION_FILENAME_PREFIX) &&
-                                !file.getName().endsWith(RF2Constants.RELEASE_INFORMATION_FILENAME_EXTENSION) &&
-                                !file.getName().startsWith(RF2Constants.BETA_RELEASE_PREFIX)) {
-                            stringBuilder.append(file.getName()).append(",");
+                FileUtils.copyInputStreamToFile(inputStream, tempFile.toFile());
+                extractFilesFromZipToOneFolder(tempFile.toFile(), tempDir.toAbsolutePath().toString());
+                
+                File[] files = tempDir.toFile().listFiles();
+                if (files != null) {
+                    for (File file : files) {
+                        if (!file.isDirectory()) {
+                            String fileName = file.getName();
+                            if (!fileName.startsWith(RF2Constants.README_FILENAME_PREFIX) &&
+                                    !fileName.endsWith(RF2Constants.README_FILENAME_EXTENSION) &&
+                                    !fileName.startsWith(RF2Constants.RELEASE_INFORMATION_FILENAME_PREFIX) &&
+                                    !fileName.endsWith(RF2Constants.RELEASE_INFORMATION_FILENAME_EXTENSION) &&
+                                    !fileName.startsWith(RF2Constants.BETA_RELEASE_PREFIX)) {
+                                stringBuilder.append(fileName).append(",");
+                            }
                         }
                     }
                 }
+                
                 String errorMsg = stringBuilder.toString();
                 return StringUtils.hasLength(errorMsg) ? errorMsg.substring(0, errorMsg.length() - 1) : null;
-            } catch (IOException e) {
-                LOGGER.error("Error occurred when validating beta release package", e);
             } finally {
-                if (tempFile != null) {
-                    tempFile.delete();
-                }
-                if (tempDir != null) {
-                    tempDir.delete();
-                }
+                FileUtils.deleteQuietly(tempFile.toFile());
+                FileUtils.deleteQuietly(tempDir.toFile());
             }
-        } else {
-            throw new ResourceNotFoundException("Package file could not be found");
+        } catch (IOException e) {
+            LOGGER.error("Error occurred when validating beta release package", e);
+            return "Error validating beta release package: " + e.getMessage();
         }
-        return null;
     }
 
     /**
      * Utility method for extracting a zip file to a given folder
      *
      * @param file      the zip file to be extracted
-     * @param outputDir the output folder to extract the zip to.
-     * @throws IOException
+     * @param outputDir the output folder to extract the zip to
+     * @throws IOException if an I/O error occurs
      */
     private void extractFilesFromZipToOneFolder(final File file, final String outputDir) throws IOException {
         try (ZipFile zipFile = new ZipFile(file)) {
@@ -127,17 +203,12 @@ public class ReleasePackageCheck extends PostconditionCheck implements NetworkRe
             while (entries.hasMoreElements()) {
                 final ZipEntry entry = entries.nextElement();
                 if (!entry.isDirectory()) {
-                    InputStream in = null;
-                    OutputStream out = null;
-                    try {
-                        in = zipFile.getInputStream(entry);
-                        String fileName = Paths.get(entry.getName()).getFileName().toString();
-                        File entryDestination = new File(outputDir, fileName);
-                        out = new FileOutputStream(entryDestination);
+                    String fileName = Path.of(entry.getName()).getFileName().toString();
+                    File entryDestination = new File(outputDir, fileName);
+                    
+                    try (InputStream in = zipFile.getInputStream(entry);
+                         OutputStream out = new FileOutputStream(entryDestination)) {
                         IOUtils.copy(in, out);
-                    } finally {
-                        IOUtils.closeQuietly(in);
-                        IOUtils.closeQuietly(out);
                     }
                 }
             }
